<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_step3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tejaswini.pwcn.Step3">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <Button
        android:text="step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button9"
        android:layout_toRightOf="@+id/button9"
        android:background="#FF9800"
        android:layout_toEndOf="@+id/button9"
        android:id="@+id/button10" />

    <Button
        android:text="step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:layout_alignTop="@+id/button10"
        android:layout_toRightOf="@+id/button10"
        android:layout_toEndOf="@+id/button10"
        android:id="@+id/button11" />

    <Button
        android:text="step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:layout_alignTop="@+id/button11"
        android:layout_toRightOf="@+id/button11"
        android:layout_toEndOf="@+id/button11"
        android:id="@+id/button12" />

    <Button
        android:text="step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:id="@+id/button9"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/step3hd"
            android:layout_width="wrap_content"
            android:paddingTop="50dp"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/textView2" />

        <TextView
            android:text="@string/hb1"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:hint="@string/hb1_1"
            android:ems="10"
            android:id="@+id/editText14" />

        <TextView
            android:text="@string/hb2"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:background="#FFB74D"
            android:hint="@string/hb2_1"
            android:ems="10"
            android:id="@+id/editText15" />
        <TextView
            android:text="@string/hb3"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView21" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner8" />

        <TextView
            android:text="@string/hb4"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView22" />


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner9" />

        <TextView
            android:text="@string/hb5"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:textColor="#FFB74D"
            android:textStyle="italic"
            android:inputType="textPersonName"
            android:hint="@string/hb5_1"
            android:ems="10"
            android:id="@+id/editText17" />

        <TextView
            android:text="@string/hb6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView15" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:hint="@string/hb6_1"
            android:ems="10"
            android:id="@+id/editText18" />

        <TextView
            android:text="@string/hb7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:hint="@string/hb7_1"
            android:background="#FFB74D"
            android:ems="10"
            android:id="@+id/editText19" />
        <TextView
            android:text="@string/hb8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView23" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:hint="@string/hb8_1"
            android:ems="10"
            android:id="@+id/editText20" />
        <TextView
            android:text="@string/hb9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView18" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hb9_1"
            android:id="@+id/editText21" />
        <Button
            android:text="next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:id="@+id/butnex3"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="250dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
    </RelativeLayout>






    </ScrollView>
