<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_step4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tejaswini.pwcn.Step4">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <Button
        android:text="step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button13"
        android:layout_toRightOf="@+id/button13"
        android:background="#FF9800"
        android:layout_toEndOf="@+id/button13"
        android:id="@+id/button14" />

    <Button
        android:text="step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:layout_alignTop="@+id/button14"
        android:layout_toRightOf="@+id/button14"
        android:layout_toEndOf="@+id/button14"
        android:id="@+id/button15" />

    <Button
        android:text="step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:layout_alignTop="@+id/button15"
        android:layout_toRightOf="@+id/button15"
        android:layout_toEndOf="@+id/button15"
        android:id="@+id/button16" />

    <Button
        android:text="step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:id="@+id/button13"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:text="@string/step4hd"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:paddingTop="50dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/textView2" />

        <TextView
            android:text="@string/hc1"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:hint="@string/hc1_1"
            android:ems="10"
            android:id="@+id/editText14" />

        <TextView
            android:text="@string/hc2"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner8" />


        <TextView
            android:text="@string/hc3"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:textColor="#FFB74D"
            android:textStyle="italic"
            android:inputType="textPersonName"
            android:hint="@string/hc3_1"
            android:ems="10"
            android:id="@+id/editText17" />

        <TextView
            android:text="@string/hc4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView15" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hc4_1"
            android:id="@+id/editText18" />

        <TextView
            android:text="@string/hc5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:background="#FFB74D"
            android:ems="10"
            android:hint="@string/hc5_1"
            android:id="@+id/editText19" />
        <TextView
            android:text="@string/hc6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView23" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:hint="@string/hc6_1"
            android:ems="10"
            android:id="@+id/editText20" />
        <TextView
            android:text="@string/hc7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView18" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hc7_1"
            android:id="@+id/editText21" />
        <TextView
            android:text="@string/hc8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView19" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:background="#FFB74D"
            android:ems="10"
            android:hint="hc8_1"
            android:id="@+id/editText22" />

        <Button
            android:text="generate report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:id="@+id/butnex4"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="250dp"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>
    </RelativeLayout>


</ScrollView>
