<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tejaswini.pwcn.Step1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageButton
        android:text="step2"
        android:src="@drawable/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:background="#FF9800"
        android:layout_toEndOf="@+id/button"
        android:id="@+id/button2" />

    <ImageButton
        android:text="step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/step3"
        android:background="#FF9800"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:id="@+id/button3" />

    <ImageButton
        android:text="step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/step4"
        android:background="#FF9800"
        android:layout_alignTop="@+id/button3"
        android:layout_toRightOf="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:id="@+id/button4" />

    <ImageButton
        android:text="step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:text="@string/step1hd"
            android:layout_width="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/textView2" />

        <TextView
            android:text="@string/h1"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:hint="@string/h1"
            android:ems="10"
            android:id="@+id/editText14" />

        <TextView
            android:text="@string/h2"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:background="#FFB74D"
            android:hint="@string/h2"
            android:ems="10"
            android:id="@+id/editText15" />
        <TextView
            android:text="COD"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView21" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner8" />

        <TextView
            android:text="Project type"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView22" />


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner9" />

        <TextView
            android:text="@string/ht5"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:textColor="#FFB74D"
            android:textStyle="italic"
            android:inputType="textPersonName"
            android:hint="@string/he5"
            android:ems="10"
            android:id="@+id/editText17" />

        <TextView
            android:text="@string/h6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView15" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText18" />

        <TextView
            android:text="@string/h7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView16" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:background="#FFB74D"
            android:ems="10"
            android:id="@+id/editText19" />
        <TextView
            android:text="@string/ht8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView23" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner10" />
        <TextView
            android:text="Registered office"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/textView24" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner11" />
        <TextView
            android:text="@string/ht9"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView25" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner12" />
        <TextView
            android:text="@string/ht10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView26" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/spinner13" />
        <TextView
            android:text="@string/ht11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView17" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:hint="@string/he11"
            android:ems="10"
            android:id="@+id/editText20" />
        <TextView
            android:text="@string/h12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView18" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFB74D"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText21" />
        <TextView
            android:text="@string/h13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="italic"
            android:id="@+id/textView19" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:background="#FFB74D"
            android:ems="10"
            android:id="@+id/editText22" />
        <TextView
            android:hint="@string/h14"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:id="@+id/textView20" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="textPersonName"
            android:background="#FFB74D"
            android:ems="10"
            android:id="@+id/editText23" />

        <Button
            android:text="next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:id="@+id/butnex1"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="250dp"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>
    </RelativeLayout>

</ScrollView>
